# task-runner-SDLC

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTORS.md  LICENSE  README.md  SECURITY.md  ai_docsGen.py  archives.7z  backup_tasks.py  change.md  deploy.py  file_patterns.json  initialize.py  license.py  main.py  maintain.py  pyproject.toml  readme.py  tasks.json  tasks.py  template.md
.github/: pull_request_template.md
.github/workflows/: static.yml
docs/: CONTRIBUTING.html  LICENSE.html  README.html  README.md  __init__.html  __init__.md  _coverpage.html  _coverpage.md  _homepage.html  _homepage.md  _navbar.html  _navbar.md  ai_docsGen.html  ai_docsGen.md  api.json  archive.html  archive.md  clone_github_repos.html  clone_github_repos.md  config.html  config.md  crypto.html  crypto.md  data.html  data.md  docs.html  docs.md  file_system.html  file_system.md  generate_system_reports.html  generate_system_reports.md  index.html  index.md  licenser.html  licenser.md  logger.html  logger.md  main.html  main.md  manager.html  (+40 more)
src/: __init__.py  __main__.py  ai_docsGen.py  config.py  deploy.py  docs.py  file_gen_license.py  file_gen_readme.py  file_patterns.json  git.py  initialize.py  license.py  licenser.py  main.py  maintain.py  manager.py  manger.py  quality.py  readme.py  setup.py  tasks.py  template.md  tools.py  utility.py
src/template/: _coverpage.md  _homepage.md  _navbar.md  _sidebar.md  template.md
src/templates/: README.md  _coverpage.md  _homepage.md  index.html  prompt_docgen.json
src/tools/: __init__.py  ai_docsGen.py  ai_file_renamer.py  clone_github_repos.py  file_patterns.json  generate_system_reports.py  move_files.py  pkm_tools.py  select_github_repo.py
src/utils/: __init__.py  archive.py  crypto.py  data.py  file_system.py  logger.py  shell.py  system.py  web.py
tests/: __init__.py  test_clone_github_repos.py  test_config.py  test_docs.py  test_git.py  test_licenser.py  test_main.py  test_manager.py  test_move_files.py  test_quality.py  test_select_github_repo.py  test_setup.py  test_utility.py
